--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ before_install:
   - sudo apt-get update -qq
 #  - sudo apt-get install -t trusty-backports cppcheck
 # Requirements for doxygen
-  - sudo apt-get install texlive-fonts-recommended lmodern texlive-xetex texlive-latex-extra pandoc
+  - sudo apt-get install texlive-fonts-recommended lmodern texlive-xetex texlive-fonts-extra pandoc
 
 script:
   - wget https://github.com/jgm/pandoc/releases/download/2.9.1.1/pandoc-2.9.1.1-1-amd64.deb
