--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -41,6 +41,8 @@ jobs:
         run: sudo ./make_pdf.sh
         
       - name: Upload PDF
+        env:
+          WEB_PWD: ${{ secrets.WEB_PWD }}
         run: |
           curl -v https://speeduino.com:2078 || true
           curl -v --tlsv1.2 --ipv4 --user "speeduino_manual@speeduino.com:$WEB_PWD" --basic -T "./offline/Speeduino_manual.pdf" "https://speeduino.com:2078/Speeduino_manual.pdf"
