--- a/.github/workflows/generate_pdf.yml
+++ b/.github/workflows/generate_pdf.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install Dependencies
         run: |
           sudo apt-get update -qq
-          sudo apt-get install texlive-fonts-recommended lmodern texlive-xetex texlive-fonts-extra pandoc
+          sudo apt-get install sed texlive-fonts-recommended lmodern texlive-xetex texlive-fonts-extra pandoc
 
       - name: Installing Pandoc
         run: |
